--- a/eason.sty
+++ b/eason.sty
@@ -13,6 +13,7 @@
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{amsthm}
 \usepackage{mathtools}
 
 \usepackage[dvipsnames]{xcolor}
