--- a/tex/2023/2/4.tex
+++ b/tex/2023/2/4.tex
@@ -1,2 +1,68 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item We have
+          \begin{align*}
+              \left(x - \sqrt{2}\right)^2 & = 3            \\
+              x^2 - 2\sqrt{2}x + 2        & = 3            \\
+              x^2 - 1                     & = 2 \sqrt{2} x \\
+              x^4 - 2x^2 + 1              & = 8x^2         \\
+              x^4 - 10 x^2 + 1            & = 0
+          \end{align*}
+          as desired.
+
+          If \(f(x) = x^4 - 10x^2 + 1\), we notice that \(x = \sqrt{2} + \sqrt{3}\) satisfies \(\left(x - \sqrt{2}\right)^2 = \left(\sqrt{3}\right)^2 = 3\), and hence \(f\left(\sqrt{2} + \sqrt{3}\right) = 0\) as desired.
+
+    \item We have
+          \begin{align*}
+              \left(x - \left(\sqrt{2} + \sqrt{3}\right)\right)^2             & = \left(\sqrt{5}\right)^2 = 5              \\
+              x^2 - 2 \left(\sqrt{2} + \sqrt{3}\right) x + 2 + 3 + 2 \sqrt{6} & = 5                                        \\
+              x^2 + 2 \sqrt{6}                                                & = 2 \left(\sqrt{2} + \sqrt{3}\right) x     \\
+              x^4 + 2 \cdot 2 \sqrt{6} \cdot x^2 + \left(2\sqrt{6}\right)^2   & = 4 \left(\sqrt{2} + \sqrt{3}\right)^2 x^2 \\
+              x^4 + 4 \sqrt{6} x^2 + 24                                       & = 4 \left(5 + 2\sqrt{6}\right)x^2          \\
+              x^4 + 4 \sqrt{6} x^2 + 24                                       & = 20 x^2 + 8 \sqrt{6} x^2                  \\
+              x^4 - 20 x^2 + 24                                               & = 4 \sqrt{6} x^2                           \\
+              \left(x^4 - 20 x^2 + 24\right)^2                                & = \left(4 \sqrt{6} x^2\right)^2            \\
+              x^8 - 40 x^6 + 448 x^4 - 960 x^2 + 576                          & = 96 x^4                                   \\
+              x^8 - 40 x^6 + 352 x^4 - 960 x^2 + 576                          & = 0.
+          \end{align*}
+
+          Therefore, the polynomial
+          \[
+              g(x) = x^8 - 40 x^6 + 352 x^4 - 960 x^2 + 576
+          \]
+          satisfies \(g\left(\sqrt{2} + \sqrt{3} + \sqrt{5}\right) = 0\) as desired.
+
+    \item If \(t = a, b, c\) are solutions to the cubic equation \(t^3 - 3t + 1 = 0\) in \(t\), then \(t = a + \sqrt{2}, b + \sqrt{2}, c + \sqrt{2}\) are solutions to the cubic equation in \(t\)
+          \begin{align*}
+              \left(y - \sqrt{2}\right)^3 - 3 \left(t - \sqrt{2}\right) + 1 & = 0                         \\
+              t^3 - 3 \sqrt{2} t^2 + 6t - 2 \sqrt{2} - 3t + 3 \sqrt{2} + 1  & = 0                         \\
+              t^3 + 3t + 1                                                  & = 3 \sqrt{2} t^2 - \sqrt{2} \\
+              t^6 + 6 t^4 + 2t^3 + 9t^2 + 6t + 1                            & = 18 t^4 - 12 t^2 + 2       \\
+              t^6 - 12 t^4 + 2t^3 + 21 t^2 + 6t - 1                         & = 0.
+          \end{align*}
+
+          Therefore, the polynomial
+          \[
+              h(x) = x^6 - 12 x^4 + 2 x^3 + 21 x^2 + 6x - 1
+          \]
+          satisfies \(h \left(a + \sqrt{2}\right) = h \left(b + \sqrt{2}\right) = h \left(c + \sqrt{2}\right) = 0\) as desired.
+
+    \item We have
+          \begin{align*}
+              \left(x - \sqrt[3]{2}\right)^3                & = 3                                            \\
+              x^3 - 3 \sqrt[3]{2} x^2 + 3 \sqrt[3]{4} x - 2 & = 3                                            \\
+              x^3 - 5                                       & = 3 \sqrt[3]{2} x^2 - 3 \sqrt[3]{4} x          \\
+              x^3 - 5                                       & = 3 \sqrt[3]{2} x \left(x - \sqrt[3]{2}\right) \\
+              x^3 - 5                                       & = 3 \sqrt[3]{2} x \cdot \sqrt[3]{3}            \\
+              x^3 - 5                                       & = 3 \sqrt[3]{6} x                              \\
+              x^9 - 15 x^6 + 75 x^3 - 125                   & = 162 x^3                                      \\
+              x^9 - 15 x^6 - 87 x^3 - 125                   & = 0.
+          \end{align*}
+
+          Therefore, the polynomial
+          \[
+              k(x) = x^9 - 15 x^6 - 87 x^3 - 125 = 0
+          \]
+          satisfies \(k \left(\sqrt[3]{2} + \sqrt[3]{3}\right) = 0\).
+\end{enumerate}
